--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,6 +6,6 @@
   "password": "s12122000",
   "database": "postgres",
   "entities": ["src/entity/*.ts"],
-  "logging": false,
+  "logging": true,
   "synchronize": true
 }
