Add second table create Sign In route

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_KEY=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
-JWT_SECRET_KEY=SECRET
+JWT_MAIL_KEY=SECRET
+JWT_CONFIRMATION_KEY=CONFIRMATION
+JWT_ACCESS_KEY=ACCESS
 SALT_BCRYPT=10
