--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY=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
+API_KEY=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
 JWT_MAIL_KEY=SECRET
 JWT_CONFIRMATION_KEY=CONFIRMATION
 JWT_ACCESS_KEY=ACCESS
