--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "joi": "^17.6.0",
@@ -27,13 +28,12 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "start": "node_modules/.bin/nodemon index.ts",
-    "starting": "node index.ts"
+    "start": "ts-node -r tsconfig-paths/register src/helpers/typeORMConfig.ts && nodemon index.ts"
   },
   "keywords": [
     "express"
   ],
-  "author": "StepanChewbacca",
+  "author": "123",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
