--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/helpers/typeORMConfig.ts && nodemon index.ts"
+    "start": "ts-node -r tsconfig-paths/register src/helpers/typeORMConfig.ts && ts-node index.ts"
   },
   "keywords": [
     "express"
