--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "package-json": "^6.5.0",
     "pg": "^8.7.1",
